# GPX_helper

./: .gitignore  README.md  map_animator.py  pyproject.toml
.github/workflows/: pr-structure-check.yml
backend/: Dockerfile  README.md  gpx_splitter.py  pyproject.toml
backend/src/gpx_helper/: __init__.py  gpx_splitter.py  map_animator.py
backend/src/gpx_helper/api/: __init__.py  main.py
backend/tests/: __init__.py  test_api.py  test_map_animator.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: App.svelte  App.test.js  app.css
